# dev-changelog-ai

./: README.md  __init__.py  commit_parser.py  pyproject.toml  requirements.txt  template_engine.py
tests/: test_ai_summarizer.py  test_commit_parser.py  test_git_integration.py  test_validator.py
